# irrlichtgameexample

./: .gitignore  CMakeLists.txt  README.md
src/main/: main.cpp
src/p1/: main.cpp
src/p2/: main.cpp
